[gd_scene load_steps=7 format=3 uid="uid://b1tp87d71nlpw"]

[ext_resource type="Script" path="res://ShooterEnemy.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bdjatifhtb4wk" path="res://Projectiles/EnemyBoolet.tscn" id="2_r5k38"]
[ext_resource type="Texture2D" uid="uid://cgltlmv62lof3" path="res://Textures/RangedEnemy.png" id="3_a4no5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(24, 28.6667)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(256, 22.6667)

[sub_resource type="Theme" id="3"]

[node name="Enemy2" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 15
script = ExtResource("2")
Bullet = ExtResource("2_r5k38")
speed = Vector2(10, 1000)
Health = 20
isEnemy = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -3.66667)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_a4no5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.33333)
shape = SubResource("1")

[node name="Gun" type="Marker2D" parent="."]
position = Vector2(-16, 0)

[node name="Gun2" type="Marker2D" parent="."]
position = Vector2(16, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.666667)
shape = SubResource("2")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = -23.0
offset_right = 110.0
offset_bottom = 4.0
scale = Vector2(0.2, 0.2)
theme = SubResource("3")
max_value = 20.0
value = 20.0
show_percentage = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
